Bug 2754 - ld segfaults when using --warn-unresolved-symbols with /dev/null
Summary: ld segfaults when using --warn-unresolved-symbols with /dev/null
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: ld (show other bugs)
Version: 2.18
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-06-11 11:06 UTC by Mike Frysinger
Modified: 2006-06-23 03:19 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Frysinger 2006-06-11 11:06:59 UTC
the uClibc build system tests a ld to see if it supports certain flags and after
upgrading to 2.17.50.0.2, one of the tests started to segfault:
$ ld --version
GNU ld version 2.17.50.0.2 20060526
$ ld --warn-unresolved-symbols -o /dev/null -b binary /dev/null
ld: warning: cannot find entry symbol _start; not setting start address
Segmentation fault

just checked latest cvs and it crashes the same way:
$ gdb --args ./ld/ld-new --warn-unresolved-symbols -o /dev/null -b binary /dev/null
Using host libthread_db library "/lib/libthread_db.so.1".
(gdb) r
Starting program: /usr/local/src/gnu/binutils/HEAD/build/ld/ld-new
--warn-unresolved-symbols -o /dev/null -b binary /dev/null
/usr/local/src/gnu/binutils/HEAD/build/ld/ld-new: warning: cannot find entry
symbol _start; not setting start address

Program received signal SIGSEGV, Segmentation fault.
bfd_elf64_swap_phdr_out (abfd=0x616b00, src=0x0, dst=0x76e3fdf40a60) at
elfcode.h:369
369     elfcode.h: No such file or directory.
        in elfcode.h
(gdb) bt
#0  bfd_elf64_swap_phdr_out (abfd=0x616b00, src=0x0, dst=0x76e3fdf40a60) at
elfcode.h:369
#1  0x000000000043c099 in bfd_elf64_write_out_phdrs (abfd=0x616b00, phdr=0x0,
count=2)
    at elfcode.h:995
#2  0x0000000000442674 in assign_file_positions_except_relocs (abfd=0x616b00,
link_info=0x5f7d20)
    at ../../bfd/elf.c:4893
#3  0x0000000000444cb4 in _bfd_elf_compute_section_file_positions (abfd=0x616b00, 
    link_info=0x5f7d20) at ../../bfd/elf.c:3528
#4  0x000000000044d179 in bfd_elf_final_link (abfd=0x616b00, info=0x5f7d20)
    at ../../bfd/elflink.c:8032
#5  0x0000000000415424 in ldwrite () at ../../ld/ldwrite.c:557
#6  0x00000000004148af in main (argc=7, argv=0x76e3fdf41258) at
../../ld/ldmain.c:478
(gdb)